--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # 生成的 APK 文件
+app/release
 *.apk
 
 # 自动生成的临时文件
@@ -7,17 +8,16 @@ gen/
 out/
 build/
 
-# 本地配置文件
+# 本地配置文件，SDK 或 NDK 配置
 local.properties
 
 # 缩略图文件
 .DS_Store
 
-# IDE 文件，但保留 copyright 和 codestyle
+# IDE 文件，但保留 copyright
 *.iml
 .idea/*
 !.idea/copyright
-!.idea/codeStyles/codeStyleConfig.xml
 
 # Gradle 缓存
 .gradle
