--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-29.0.2
+    - build-tools-28.0.3
     - android-29
+    - addon-google_apis-google-29
     - extra-google-m2repository
     - extra-android-m2repository
 before_install:
