Update release config

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,25 @@
-# 生成的 APK 文件
+*.keystore
+keystore.properties
+
 app/release
 *.apk
 
-# 自动生成的临时文件
 bin/
 gen/
 out/
 build/
 
-# 本地配置文件，SDK 或 NDK 配置
 local.properties
 
-# 缩略图文件
 .DS_Store
 
-# IDE 文件，但保留 copyright
 *.iml
 .idea/*
 !.idea/copyright
 
-# Gradle 缓存
 .gradle
 
-# 截图目录
 captures/
 
-# NDK 构建文件
 .externalNativeBuild
 .cxx
