--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ build_versions.target_sdk = 29
 ext.build_versions = build_versions
 
 def versions = [:]
-versions.android_gradle_plugin = "4.0.0-alpha02"
+versions.android_gradle_plugin = '4.0.0-alpha04'
 versions.kotlin = "1.3.60-eap-25"
 versions.androidx = "1.1.0"
 versions.constraint_layout = "1.1.3"
