--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,20 @@ android:
     - addon-google_apis-google-29
     - extra-google-m2repository
     - extra-android-m2repository
+    - sys-img-armeabi-v7a-android-28
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 before_install:
   - openssl aes-256-cbc -K $encrypted_5ad7d9eff25f_key -iv $encrypted_5ad7d9eff25f_iv -in han.keystore.enc -out han.keystore -d
   - chmod +x gradlew
   - gem install fir-cli
+before_script:
+  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 script:
   - ./gradlew assembleRelease
   - ./gradlew createDebugCoverageReport
