--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -13,6 +13,7 @@ versions.constraint_layout = "1.1.3"
 versions.junit = "4.12"
 versions.androidx_test = "1.3.0-alpha02"
 versions.espresso = "3.3.0-alpha02"
+versions.uiautomator = "2.2.0"
 
 def deps = [:]
 
@@ -37,6 +38,8 @@ androidx_test.junit = "androidx.test.ext:junit:1.1.2-alpha02"
 androidx_test.truth = "androidx.test.ext:truth:$versions.androidx_test"
 androidx_test.espresso_core = "androidx.test.espresso:espresso-core:$versions.espresso"
 androidx_test.espresso_contrib = "androidx.test.espresso:espresso-contrib:$versions.espresso"
+androidx_test.espresso_intents = "androidx.test.espresso:espresso-intents:$versions.espresso"
+androidx_test.uiautomator = "androidx.test.uiautomator:uiautomator:$versions.uiautomator"
 deps.androidx_test = androidx_test
 
 ext.deps = deps
