--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,6 +14,9 @@ versions.junit = "4.12"
 versions.androidx_test = "1.3.0-alpha02"
 versions.espresso = "3.3.0-alpha02"
 versions.uiautomator = "2.2.0"
+versions.retrofit = "2.6.1"
+versions.okhttp = "4.2.2"
+versions.stetho = "1.5.1"
 
 def deps = [:]
 
@@ -24,11 +27,17 @@ deps.kotlin = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 
 def androidx = [:]
 androidx.app_compat = "androidx.appcompat:appcompat:$versions.androidx"
-androidx.ktx = "androidx.core:core-ktx:$versions.androidx"
+androidx.ktx_core = "androidx.core:core-ktx:$versions.androidx"
+androidx.ktx_collection = "androidx.collection:collection-ktx:$versions.androidx"
+androidx.ktx_fragment = "androidx.fragment:fragment-ktx:$versions.androidx"
+androidx.ktx_lifecycle_runtime = "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-rc02"
+androidx.ktx_lifecycle_viewmodel = "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc02"
+androidx.ktx_lifecycle_livedata = "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc02"
 androidx.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
 deps.androidx = androidx
 
 deps.junit = "junit:junit:$versions.junit"
+deps.okhttp_mock = "com.squareup.okhttp3:mockwebserver:$versions.okhttp"
 
 def androidx_test = [:]
 androidx_test.core = "androidx.test:core:1.2.1-alpha02"
@@ -41,5 +50,15 @@ androidx_test.espresso_contrib = "androidx.test.espresso:espresso-contrib:$versi
 androidx_test.espresso_intents = "androidx.test.espresso:espresso-intents:$versions.espresso"
 androidx_test.uiautomator = "androidx.test.uiautomator:uiautomator:$versions.uiautomator"
 deps.androidx_test = androidx_test
+
+def retrofit = [:]
+retrofit.core = "com.squareup.retrofit2:retrofit:$versions.retrofit"
+retrofit.converter_gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
+deps.retrofit = retrofit
+
+def stetho = [:]
+stetho.core = "com.facebook.stetho:stetho:$versions.stetho"
+stetho.okhttp3_helper = "com.facebook.stetho:stetho-okhttp3:$versions.stetho"
+deps.stetho = stetho
 
 ext.deps = deps
