--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,9 +9,11 @@ def versions = [:]
 versions.android_gradle_plugin = '4.0.0-alpha04'
 versions.kotlin = "1.3.60"
 versions.androidx = "1.1.0"
+versions.androidx_lifecycle = "2.2.0-rc03"
+versions.androidx_navigation = "2.2.0-rc03"
+versions.androidx_test = "1.3.0-alpha03"
 versions.constraint_layout = "1.1.3"
 versions.junit = "4.12"
-versions.androidx_test = "1.3.0-alpha02"
 versions.espresso = "3.3.0-alpha02"
 versions.uiautomator = "2.2.0"
 versions.retrofit = "2.6.1"
@@ -24,6 +26,7 @@ def deps = [:]
 
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 deps.kotlin_gradle_plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+deps.navigation_gradle_plugin = "androidx.navigation:navigation-safe-args-gradle-plugin:$versions.androidx_navigation"
 
 deps.kotlin = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 
@@ -32,9 +35,11 @@ androidx.app_compat = "androidx.appcompat:appcompat:$versions.androidx"
 androidx.ktx_core = "androidx.core:core-ktx:$versions.androidx"
 androidx.ktx_collection = "androidx.collection:collection-ktx:$versions.androidx"
 androidx.ktx_fragment = "androidx.fragment:fragment-ktx:$versions.androidx"
-androidx.ktx_lifecycle_runtime = "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-rc02"
-androidx.ktx_lifecycle_viewmodel = "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc02"
-androidx.ktx_lifecycle_livedata = "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc02"
+androidx.ktx_lifecycle_runtime = "androidx.lifecycle:lifecycle-runtime-ktx:$versions.androidx_lifecycle"
+androidx.ktx_lifecycle_viewmodel = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.androidx_lifecycle"
+androidx.ktx_lifecycle_livedata = "androidx.lifecycle:lifecycle-livedata-ktx:$versions.androidx_lifecycle"
+androidx.ktx_navigation_fragment = "androidx.navigation:navigation-fragment-ktx:$versions.androidx_navigation"
+androidx.ktx_navigation_ui = "androidx.navigation:navigation-ui-ktx:$versions.androidx_navigation"
 androidx.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
 deps.androidx = androidx
 
