--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,21 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        eachDependency { details ->
+            if (details.requested.group == 'androidx.appcompat'
+                    && details.requested.name != 'multidex'
+                    && details.requested.name != 'multidex-instrumentation') {
+                details.useVersion versions.androidx
+            }
+            if (details.requested.group == 'com.google.code.findbugs') {
+                details.useVersion versions.findbugs
+            }
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation deps.kotlin
@@ -92,7 +107,6 @@ dependencies {
     implementation deps.okhttp.logging_interceptor
 
     implementation deps.room.core
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt deps.room.compiler
     implementation deps.room.ktx
 
@@ -109,7 +123,6 @@ dependencies {
 
     testImplementation deps.junit
     testImplementation deps.androidx_test.core
-    testImplementation deps.okhttp.mock
     testImplementation deps.room.testing
     testImplementation deps.koin.test
 
