--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,8 +6,9 @@ build_versions.target_sdk = 29
 ext.build_versions = build_versions
 
 def versions = [:]
-versions.android_gradle_plugin = '4.0.0-alpha06'
+versions.android_gradle_plugin = '3.6.0-beta05'
 versions.kotlin = "1.3.60"
+versions.findbugs = "3.0.2"
 versions.androidx = "1.1.0"
 versions.androidx_lifecycle = "2.2.0-rc03"
 versions.androidx_navigation = "2.2.0-rc03"
@@ -21,6 +22,7 @@ versions.okhttp = "4.2.2"
 versions.stetho = "1.5.1"
 versions.room = "2.2.2"
 versions.koin = "2.1.0-alpha-7"
+ext.versions = versions
 
 def deps = [:]
 
@@ -63,7 +65,6 @@ retrofit.converter_gson = "com.squareup.retrofit2:converter-gson:$versions.retro
 deps.retrofit = retrofit
 
 def okhttp = [:]
-okhttp.mock = "com.squareup.okhttp3:mockwebserver:$versions.okhttp"
 okhttp.logging_interceptor = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp"
 deps.okhttp = okhttp
 
