--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ build_versions.target_sdk = 29
 ext.build_versions = build_versions
 
 def versions = [:]
-versions.android_gradle_plugin = '3.6.0-beta05'
+versions.android_gradle_plugin = '4.1.0-alpha03'
 versions.kotlin = "1.3.60"
 versions.findbugs = "3.0.2"
 versions.androidx = "1.1.0"
