--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
-os: linux
+os: osx
 language: android
+dist: trusty
 android:
   components:
     - tools
     - platform-tools
-    - build-tools-28.0.3
-    - android-29
-    - android-21
-    - addon-google_apis-google-29
-    - extra-google-m2repository
-    - extra-android-m2repository
+    - build-tools-26.0.2
+    - android-26
+    - add-on
+    - extra
     - sys-img-armeabi-v7a-android-21
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
