--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ android:
   components:
     - build-tools-29.0.2
     - android-29
+    - android-21
     - add-on
     - extra
-    - sys-img-armeabi-v7a-android-29
+    - sys-img-armeabi-v7a-android-21
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
@@ -15,7 +16,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_5ad7d9eff25f_key -iv $encrypted_5ad7d9eff25f_iv -in han.keystore.enc -out han.keystore -d
   - chmod +x gradlew
 before_script:
-  - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell settings put global window_animation_scale 0 &
