--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.frank.han">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,6 +21,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <meta-data android:name="com.frank.han.components.StethoInitializer"
+                android:value="androidx.startup" />
+            <meta-data android:name="com.frank.han.components.KoinInitializer"
+                android:value="androidx.startup" />
+        </provider>
+
     </application>
 
 </manifest>
