--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,26 +2,39 @@ ext.deps = [:]
 
 def build_versions = [:]
 build_versions.min_sdk = 21
-build_versions.target_sdk = 29
+build_versions.target_sdk = 30
 ext.build_versions = build_versions
 
 def versions = [:]
-versions.android_gradle_plugin = '4.1.0-alpha03'
-versions.kotlin = "1.3.60"
+versions.android_gradle_plugin = '4.1.1'
+versions.kotlin = "1.4.10"
 versions.findbugs = "3.0.2"
-versions.androidx = "1.1.0"
-versions.androidx_lifecycle = "2.2.0-rc03"
-versions.androidx_navigation = "2.2.0-rc03"
-versions.androidx_test = "1.3.0-alpha03"
-versions.constraint_layout = "1.1.3"
+versions.androidx_core = "1.3.2"
+versions.androidx_appcompat = "1.2.0"
+versions.androidx_recyclerview = "1.1.0"
+versions.androidx_startup = "1.0.0"
+versions.androidx_datastore = "1.0.0-alpha04"
+versions.androidx_lifecycle = "2.2.0"
+versions.androidx_navigation = "2.3.1"
+versions.androidx_constraintlayout = "2.0.4"
+versions.androidx_fragment = "1.2.5"
+versions.androidx_collection = "1.1.0"
+versions.androidx_test_core = "1.3.0"
+versions.androidx_test_runner_rules = "1.3.0"
+versions.androidx_test_junit = "1.1.2"
+versions.androidx_test_truth = "1.3.0"
+versions.androidx_test_espresso = "3.3.0"
+versions.androidx_test_uiautomator = "2.2.0"
+versions.google_truth = "0.42"
 versions.junit = "4.12"
-versions.espresso = "3.3.0-alpha02"
-versions.uiautomator = "2.2.0"
-versions.retrofit = "2.6.1"
-versions.okhttp = "4.2.2"
+versions.mockito = "1.10.19"
+versions.espresso = "3.1.0"
+versions.retrofit = "2.9.0"
+versions.okhttp = "4.8.0"
 versions.stetho = "1.5.1"
 versions.room = "2.2.2"
-versions.koin = "2.1.0-alpha-7"
+versions.koin = "2.2.1"
+versions.glide = "4.11.0"
 ext.versions = versions
 
 def deps = [:]
@@ -33,30 +46,38 @@ deps.navigation_gradle_plugin = "androidx.navigation:navigation-safe-args-gradle
 deps.kotlin = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 
 def androidx = [:]
-androidx.app_compat = "androidx.appcompat:appcompat:$versions.androidx"
-androidx.ktx_core = "androidx.core:core-ktx:$versions.androidx"
-androidx.ktx_collection = "androidx.collection:collection-ktx:$versions.androidx"
-androidx.ktx_fragment = "androidx.fragment:fragment-ktx:$versions.androidx"
-androidx.ktx_lifecycle_runtime = "androidx.lifecycle:lifecycle-runtime-ktx:$versions.androidx_lifecycle"
+androidx.appcompat = "androidx.appcompat:appcompat:$versions.androidx_appcompat"
+androidx.recyclerview = "androidx.recyclerview:recyclerview:$versions.androidx_recyclerview"
+androidx.constraintlayout = "androidx.constraintlayout:constraintlayout:$versions.androidx_constraintlayout"
+androidx.startup = "androidx.startup:startup-runtime:$versions.androidx_startup"
+androidx.datastore_prefs = "androidx.datastore:datastore-preferences:$versions.androidx_datastore"
+androidx.datastore_proto = "androidx.datastore:datastore:$versions.androidx_datastore"
+androidx.ktx_core = "androidx.core:core-ktx:$versions.androidx_core"
+androidx.ktx_collection = "androidx.collection:collection-ktx:$versions.androidx_collection"
+androidx.ktx_fragment = "androidx.fragment:fragment-ktx:$versions.androidx_fragment"
 androidx.ktx_lifecycle_viewmodel = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.androidx_lifecycle"
+androidx.lifecycle_viewmodel_savedstate = "androidx.lifecycle:lifecycle-viewmodel-savedstate:$versions.androidx_lifecycle"
 androidx.ktx_lifecycle_livedata = "androidx.lifecycle:lifecycle-livedata-ktx:$versions.androidx_lifecycle"
+androidx.lifecycle_compiler = "androidx.lifecycle:lifecycle-compiler:$versions.androidx_lifecycle"
 androidx.ktx_navigation_fragment = "androidx.navigation:navigation-fragment-ktx:$versions.androidx_navigation"
 androidx.ktx_navigation_ui = "androidx.navigation:navigation-ui-ktx:$versions.androidx_navigation"
-androidx.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
 deps.androidx = androidx
 
 deps.junit = "junit:junit:$versions.junit"
+deps.mockito = "org.mockito:mockito-core:$versions.mockito"
 
 def androidx_test = [:]
-androidx_test.core = "androidx.test:core:1.2.1-alpha02"
-androidx_test.runner = "androidx.test:runner:$versions.androidx_test"
-androidx_test.rules = "androidx.test:rules:$versions.androidx_test"
-androidx_test.junit = "androidx.test.ext:junit:1.1.2-alpha02"
-androidx_test.truth = "androidx.test.ext:truth:$versions.androidx_test"
-androidx_test.espresso_core = "androidx.test.espresso:espresso-core:$versions.espresso"
-androidx_test.espresso_contrib = "androidx.test.espresso:espresso-contrib:$versions.espresso"
-androidx_test.espresso_intents = "androidx.test.espresso:espresso-intents:$versions.espresso"
-androidx_test.uiautomator = "androidx.test.uiautomator:uiautomator:$versions.uiautomator"
+androidx_test.core = "androidx.test:core:$versions.androidx_test_core"
+androidx_test.core_ktx = "androidx.test:core-ktx:$versions.androidx_test_core"
+androidx_test.runner = "androidx.test:runner:$versions.androidx_test_runner_rules"
+androidx_test.rules = "androidx.test:rules:$versions.androidx_test_runner_rules"
+androidx_test.junit = "androidx.test.ext:junit:$versions.androidx_test_junit"
+androidx_test.junit_ktx = "androidx.test.ext:junit-ktx:$versions.androidx_test_junit"
+androidx_test.truth = "androidx.test.ext:truth:$versions.androidx_test_truth"
+androidx_test.espresso_core = "androidx.test.espresso:espresso-core:$versions.androidx_test_espresso"
+androidx_test.espresso_contrib = "androidx.test.espresso:espresso-contrib:$versions.androidx_test_espresso"
+androidx_test.espresso_intents = "androidx.test.espresso:espresso-intents:$versions.androidx_test_espresso"
+androidx_test.uiautomator = "androidx.test.uiautomator:uiautomator:$versions.androidx_test_uiautomator"
 deps.androidx_test = androidx_test
 
 def retrofit = [:]
@@ -90,5 +111,10 @@ def stetho = [:]
 stetho.core = "com.facebook.stetho:stetho:$versions.stetho"
 stetho.okhttp3_helper = "com.facebook.stetho:stetho-okhttp3:$versions.stetho"
 deps.stetho = stetho
+
+def glide = [:]
+glide.core = "com.github.bumptech.glide:glide:$versions.glide"
+glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide"
+deps.glide = glide
 
 ext.deps = deps
