--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ android:
 before_install:
   - openssl aes-256-cbc -K $encrypted_5ad7d9eff25f_key -iv $encrypted_5ad7d9eff25f_iv -in han.keystore.enc -out han.keystore -d
   - chmod +x gradlew
+  - yes | sdkmanager "platforms;android-30"
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
