--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ before_script:
   - adb shell settings put global animator_duration_scale 0 &
   - adb shell input keyevent 82 &
 script:
-  - ./gradlew createDebugCoverageReport
+  - ./gradlew build jacocoTestReport assembleAndroidTest
+  - ./gradlew connectedCheck
   - ./gradlew assembleRelease
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
