--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,7 +25,7 @@ versions.androidx_test_junit = "1.1.2"
 versions.androidx_test_truth = "1.3.0"
 versions.androidx_test_espresso = "3.3.0"
 versions.androidx_test_uiautomator = "2.2.0"
-versions.google_truth = "0.42"
+versions.google_truth = "1.1"
 versions.junit = "4.12"
 versions.mockito = "1.10.19"
 versions.espresso = "3.1.0"
@@ -67,6 +67,7 @@ deps.androidx = androidx
 
 deps.junit = "junit:junit:$versions.junit"
 deps.mockito = "org.mockito:mockito-core:$versions.mockito"
+deps.google_truth = "com.google.truth:truth:$versions.google_truth"
 
 def androidx_test = [:]
 androidx_test.core = "androidx.test:core:$versions.androidx_test_core"
