--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,7 @@ tasks.withType(Test) {
 }
 
 jacocoAndroidUnitTestReport {
-    excludes += ['**/api/*',
-                 '**/components/*',
-                 '**/*DTO.*',
-                 '**/*PO.*',
-                 '**/*VO.*',
-                 '**/*ErrorInfo.*',
-                 '**/*Resource.*',
-                 '**/*Base*Fragment.*']
+    excludes += []
 }
 
 android {
