--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,7 +9,7 @@ def versions = [:]
 versions.android_gradle_plugin = '4.1.1'
 versions.kotlin = "1.4.10"
 versions.findbugs = "3.0.2"
-versions.androidx_core = "1.3.2"
+versions.androidx_core = "1.5.0-beta01"
 versions.androidx_appcompat = "1.2.0"
 versions.androidx_recyclerview = "1.1.0"
 versions.androidx_startup = "1.0.0"
