--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,9 +136,12 @@ dependencies {
     implementation deps.glide.core
     kapt deps.glide.compiler
 
+    testImplementation deps.androidx_test.arch_core
+    testImplementation deps.kotlinx_coroutines_test
     testImplementation deps.junit
     testImplementation deps.mockito
     testImplementation deps.google_truth
+    testImplementation deps.retrofit.mock
     testImplementation deps.room.testing
     testImplementation deps.koin.test
 
