--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,6 +10,7 @@ versions.android_gradle_plugin = '4.1.1'
 versions.kotlin = "1.4.10"
 versions.findbugs = "3.0.2"
 versions.androidx_core = "1.5.0-beta01"
+versions.androidx_arch_core = "2.1.0"
 versions.androidx_appcompat = "1.2.0"
 versions.androidx_recyclerview = "1.1.0"
 versions.androidx_startup = "1.0.0"
@@ -26,6 +27,7 @@ versions.androidx_test_truth = "1.3.0"
 versions.androidx_test_espresso = "3.3.0"
 versions.androidx_test_uiautomator = "2.2.0"
 versions.google_truth = "1.1"
+versions.kotlinx_coroutines_test = "1.4.2"
 versions.junit = "4.12"
 versions.mockito = "1.10.19"
 versions.espresso = "3.1.0"
@@ -68,10 +70,12 @@ deps.androidx = androidx
 deps.junit = "junit:junit:$versions.junit"
 deps.mockito = "org.mockito:mockito-core:$versions.mockito"
 deps.google_truth = "com.google.truth:truth:$versions.google_truth"
+deps.kotlinx_coroutines_test = "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.kotlinx_coroutines_test"
 
 def androidx_test = [:]
 androidx_test.core = "androidx.test:core:$versions.androidx_test_core"
 androidx_test.core_ktx = "androidx.test:core-ktx:$versions.androidx_test_core"
+androidx_test.arch_core = "androidx.arch.core:core-testing:$versions.androidx_arch_core"
 androidx_test.fragment = "androidx.fragment:fragment-testing:$versions.androidx_fragment"
 androidx_test.navigation = "androidx.navigation:navigation-testing:$versions.androidx_navigation"
 androidx_test.runner = "androidx.test:runner:$versions.androidx_test_runner_rules"
@@ -88,6 +92,7 @@ deps.androidx_test = androidx_test
 def retrofit = [:]
 retrofit.core = "com.squareup.retrofit2:retrofit:$versions.retrofit"
 retrofit.converter_gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
+retrofit.mock = "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
 deps.retrofit = retrofit
 
 def okhttp = [:]
