--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: android
-dist: xenial
+dist: trusty
 sudo: required
-jdk:
-  - openjdk9
 android:
   components:
     - build-tools-29.0.2
